# s3-quality-monitor

./: pyproject.toml
monitor/: __main__.py  cli.py  report.py  runner.py  s3.py  validators.py
tests/: test_runner.py  test_s3.py  test_validators.py
